Relocated index file to top level root directory

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script type="text/javascript" src="../../dist/audiorecorder.js"></script>
+    <script type="text/javascript" src="../dist/audiorecorder.js"></script>
 </head>
 
 <body>
