--- a/app/index.html
+++ b/app/index.html
@@ -72,11 +72,11 @@
             const buttons = ["start", "stop", "reset"];
             for (let buttonName of buttons) {
                 if (buttonName === "start") {
-                    // Disable the start button unless reset button is pressed or page is freshly loaded
+                    // Disable the start button unless the reset button is pressed or the page is freshly loaded
                     document.getElementById("id_" + buttonName).disabled = !enabledButtons.includes(buttonName);
                 } else if (buttonName === "reset") {
-                    // Handle reset button separately
-                    document.getElementById("id_" + buttonName).disabled = enabledButtons.includes("start") ? false : true;
+                    // Handle reset button separately: it will only be enabled after stopping the recording
+                    document.getElementById("id_" + buttonName).disabled = !enabledButtons.includes(buttonName);
                 } else {
                     document.getElementById("id_" + buttonName).disabled = !enabledButtons.includes(buttonName);
                 }
