--- a/app/index.html
+++ b/app/index.html
@@ -125,7 +125,7 @@
                 });
                 let mp3BlobUrl = URL.createObjectURL(mp3Blob);
                 showrecording(mp3BlobUrl);
-                showbuttons(["start"]);
+                showbuttons(["reset"]);
                 uploadFile(mp3Blob);
             };
 
