attempt 2 at clearing clipboard on reset

--- a/app/index.html
+++ b/app/index.html
@@ -182,7 +182,7 @@
             document.getElementById("debugLog").innerHTML = "";
 
             // Clear the clipboard
-            copyToClipboard("");
+            navigator.clipboard.writeText('');
         }
 
 		function getMicrophoneDetails() {
